--- a/backend/index.html
+++ b/backend/index.html
@@ -25,7 +25,7 @@
 
   
   function createPolygons() {
-    fetch('http://localhost:3000/api/locations')
+    fetch('https://polygon-visualization.onrender.com/api/locations')
       .then(response => response.json())
       .then(data => {
         console.log(data);
